--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "latest",
     "react-loadable": "latest",
     "react-router-dom": "latest",
+    "rmwc": "^2.1.0",
     "sirv-cli": "latest"
   },
   "devDependencies": {
