Adds thunk as a dependency

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "latest",
     "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
     "rmwc": "^2.1.0",
     "sirv-cli": "latest"
   },
